# vk-weighted-blended

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json
.github/workflows/: build.yml
.github/workflows/scripts/: CMakeUserPresets.json
.github/workflows/scripts/triplets/: arm64-macos-clang.cmake  x64-linux-clang.cmake
interface/: MainApp.cppm  mod.cppm
interface/vulkan/: Frame.cppm  Gpu.cppm  SharedData.cppm
interface/vulkan/attachment_group/: Composition.cppm  Opaque.cppm  WeightedBlended.cppm
interface/vulkan/buffer/: CubeInstances.cppm
interface/vulkan/descriptor_set_layout/: WeightedBlendedInput.cppm
interface/vulkan/mesh/: Cube.cppm
interface/vulkan/pipeline/: CompositionRenderer.cppm  OpaqueRenderer.cppm  WeightedBlendedRenderer.cppm
interface/vulkan/render_pass/: WeightedBlended.cppm
shaders/: composition.frag  opaque.frag  opaque.vert  weighted_blended.frag
